--- a/about.html
+++ b/about.html
@@ -7,8 +7,6 @@ background: '/img/bg-about.jpg'
 
 <p>A former bridge and structural engineering fully transitioned into data science and machine learning</p>
 
-<p>I live in Johanessburg, South Africa, currently enrolled for a masters degree in data science.
-    I am a data scientist because I love solving large, complicated 
-    problems through the acquisition, wrangling, analysis, and presentation of data.</p>
+<p>I live in Johanessburg, South Africa, currently enrolled for a masters degree in data science. I am a data scientist because I love solving large, complicated problems through the acquisition, wrangling, analysis, and presentation of data.</p>
 
 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
