--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About Me
 description: This is what I do.
-background: '/img/bg-about.jpg'
+background: '/img/bg-about3.jpg'
 ---
 
 <p>A former bridge and structural engineering fully transitioned into data science and machine learning</p>
