--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@ description: This is what I do.
 background: '/img/bg-about3.webp'
 ---
 
-<p>A former bridge and structural engineering fully transitioned into data science and machine learning</p>
+<p>A former bridge and structural engineer fully transitioned into data science and machine learning</p>
 
-<p>I live in Johanessburg, South Africa, currently enrolled for a masters degree in data science. I am a data scientist because I love solving large, complicated problems through the acquisition, wrangling, analysis, and presentation of data.</p>
+<p>I live in Johanessburg, South Africa, currently enrolled for a masters degree in data science. Passionate about solving large, complicated problems through the acquisition, wrangling, analysis, and presentation of data.</p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
